# dogs

./: .dockerignore  .gitignore  CMakeLists.txt  Makefile  README.md  docker-compose.yaml  vcpkg.json
db/init/: 02_seed.sh
src/: main.c
src/db/: db.c  db.h
src/db_health/: db_health.c  db_health.h
src/handlers/: get_dogs.c  handlers.h  health_check.c
src/helpers/time_utils/: time_utils.c  time_utils.h
src/helpers/uuid/: uuid.h
src/http/: http.c  http.h  router.c  router.h
src/logging/: logging.c  logging.h
src/services/db_health/: db_health.c  db_health.h
src/services/dog_service/: dog_service.c  dog_service.h
src/uuid/: uuid.c
zarf/docker/backend/: dogs-api.dockerfile
zarf/docker/postgres/: postgresql.conf
zarf/docker/postgres/init/: 01_schema.sql  data.csv
